# owa-mail

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
owa_mail/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  dates.py  folders.py  format.py  jwt.py  messages.py  scheduled.py
scripts/: add-to-path.sh
tests/: conftest.py  test_auth.py  test_cli_smoke.py  test_cli_validation.py  test_config.py  test_folders.py  test_format.py  test_live.py  test_messages.py  test_scheduled.py
