[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "owa-mail"
version = "0.1.0"
description = "Pipe-friendly mail CLI for Outlook / Microsoft 365"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = ["owa-piggy>=0.6.0"]
keywords = [
  "outlook",
  "microsoft-365",
  "mail",
  "email",
  "cli",
  "json",
  "graph",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Email",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/damsleth/owa-mail"
Repository = "https://github.com/damsleth/owa-mail"
Issues = "https://github.com/damsleth/owa-mail/issues"
Changelog = "https://github.com/damsleth/owa-mail/releases"

[project.scripts]
owa-mail = "owa_mail:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["owa_mail"]
